objects/MPM4_Milestone1_Log__c.object
<CustomObject>
    <description>Updated version of Milestone1_Log that allows weekly status (logs) to be used by any MPM4 object</description>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>20000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Detail__c</fullName>
        <label>Detail</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Highlights_Last_Week__c</fullName>
        <label>Highlights This Week</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Path_to_Green__c</fullName>
        <label>Path to Green</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Plans_This_Week__c</fullName>
        <label>Focus for Next Week</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Program__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Program</label>
        <referenceTo>MPM4_BASE__Milestone1_Program__c</referenceTo>
        <relationshipLabel>Weekly Status</relationshipLabel>
        <relationshipName>Weekly_Status</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>MPM4_BASE__Milestone1_Project__c</referenceTo>
        <relationshipLabel>Weekly Status</relationshipLabel>
        <relationshipName>Weekly_Status1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Reason_For_Red_Amber__c</fullName>
        <label>Reason For Red/Amber</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Report_Date__c</fullName>
        <label>Report Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <label>Subject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Weekly Status</fullName>
                    <default>true</default>
                    <label>Weekly Status</label>
                </value>
                <value>
                    <fullName>Project Log</fullName>
                </value>
                <value>
                    <fullName>Program Log</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Week_Of_Year__c</fullName>
        <formula>IF(CEILING(((Report_Date__c - DATE(YEAR(Report_Date__c), 1, 1) + 1) + 
MOD(DATE(YEAR(Report_Date__c), 1, 1) - DATE(1900, 1, 7), 7)) / 7)=53,1,CEILING(((Report_Date__c - DATE(YEAR(Report_Date__c), 1, 1) + 1) + 
MOD(DATE(YEAR(Report_Date__c), 1, 1) - DATE(1900, 1, 7), 7)) / 7))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Week Of Year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Weekly Status</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Week_Of_Year__c</columns>
        <columns>Report_Date__c</columns>
        <columns>Highlights_Last_Week__c</columns>
        <columns>Plans_This_Week__c</columns>
        <columns>Comments__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>LOG-{0000000}</displayFormat>
        <label>Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Weekly Status</pluralLabel>
    <recordTypes>
        <fullName>New</fullName>
        <active>true</active>
        <description>Initial record creation - that then defaults to associated record type.</description>
        <label>New</label>
    </recordTypes>
    <recordTypes>
        <fullName>Program_Log</fullName>
        <active>true</active>
        <description>Logs used on Programs</description>
        <label>Program Log</label>
    </recordTypes>
    <recordTypes>
        <fullName>Project_Log</fullName>
        <active>true</active>
        <description>Logs used on Projects</description>
        <label>Project Log</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>ValidationReasonForRed</fullName>
        <active>true</active>
        <errorConditionFormula>(OR(ISPICKVAL( Program__r.Delivery_Health__c , &apos;Red&apos;),
ISPICKVAL( Program__r.Budget_Health__c , &apos;Red&apos;),
ISPICKVAL( Program__r.Revenue_Rec_Health__c , &apos;Red&apos;),
ISPICKVAL( Program__r.Delivery_Health__c , &apos;Yellow&apos;),
ISPICKVAL( Program__r.Budget_Health__c , &apos;Yellow&apos;),
ISPICKVAL( Program__r.Revenue_Rec_Health__c , &apos;Yellow&apos;)))
&amp;&amp;
(ISBLANK( Reason_For_Red_Amber__c ))</errorConditionFormula>
        <errorMessage>Please enter &quot;Reason For Red/Amber&quot;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ValidationforPathtoGreen</fullName>
        <active>true</active>
        <errorConditionFormula>(OR(ISPICKVAL( Program__r.Delivery_Health__c , &apos;Red&apos;),
ISPICKVAL( Program__r.Budget_Health__c , &apos;Red&apos;),
ISPICKVAL( Program__r.Revenue_Rec_Health__c , &apos;Red&apos;),
ISPICKVAL( Program__r.Delivery_Health__c , &apos;Yellow&apos;),
ISPICKVAL( Program__r.Budget_Health__c , &apos;Yellow&apos;),
ISPICKVAL( Program__r.Revenue_Rec_Health__c , &apos;Yellow&apos;)))
&amp;&amp;
(ISBLANK( Path_to_Green__c ))</errorConditionFormula>
        <errorMessage>Please enter &quot;Path to Green&quot;.</errorMessage>
    </validationRules>
</CustomObject>